syntax = "proto3";

package common;

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

option go_package = "github.com/scoir/canis/pkg/protogen/common";

message AttrInfo {
    string name = 1;
    string restrictions = 2; // wql query
    google.protobuf.Timestamp non_revoked = 3;
}

message PredicateInfo {
    string name = 1; // attribute name, (case insensitive and ignore spaces)
    string p_type = 2; // (Currently >= only)
    int32 p_value = 3;
    string restrictions = 4; // wql query
    google.protobuf.Timestamp non_revoked = 5;
}

message RequestPresentationRequest {
    string agent_name = 1;
    string external_id = 2;
    RequestPresentation presentation = 3;
}

message RequestPresentation {
    string name = 1;
    string version = 2;
    string schema_id = 3;
    string comment = 4;
    bool will_confirm = 5;
    map<string, AttrInfo> requested_attributes = 6;
    map<string, PredicateInfo> requested_predicates = 7;
}

message RequestPresentationResponse {
    string request_presentation_id = 1;
}

message InvitationRequest {
    string agent_name = 1;
    string external_id = 2;
    string connection_name = 3;
}

message InvitationResponse {
    string invitation = 1;
}

message AcceptInvitationRequest {
    string agent_name = 1;
    string external_id = 2;
    string name = 3;
    string invitation = 4;
}

message AcceptInvitationResponse {

}

message CredentialAttribute {
    string name = 1;
    string value = 2;
}

message Credential {
    string credential_id = 1;
    string schema_id = 2;
    string comment = 3;
    string type = 4;
    string status = 5;
    google.protobuf.Struct body = 6;
    repeated CredentialAttribute preview = 7;

}

message IssueCredentialRequest {
    string agent_name = 1;
    string external_id = 2;
    Credential credential = 3;
}

message IssueCredentialResponse {
    string credential_id = 1;
}

message EndpointRequest {
}

message EndpointResponse {
    string Endpoint = 1;
}

message RegisterEdgeAgentRequest {
    string external_id = 2;
    string secret = 3;
}

message RegisterEdgeAgentResponse {
    string Id = 1;
    string Invitation = 2;
}

message RegisterCloudAgentRequest {
    bytes public_key = 1;
    bytes next_key = 2;
    string external_id = 3;
    string secret = 4;
}

message RegisterCloudAgentResponse {
    string cloud_agent_id = 1;
}


message Connection {
    string id = 1;
    string name = 2;
    string their_did = 3;
    string my_did = 4;
    string status = 5;
}

message ListConnectionsRequest {
}

message ListConnectionsResponse {
    int64 count = 1;
    repeated Connection connections = 2;
}

message ListCredentialsRequest {
}

message ListCredentialsResponse {
    int64 count = 1;
    repeated Credential credentials = 2;
}

message HandleInvitationRequest {
    string invitation = 1;
}

message HandleInvitationResponse {

}

message PollConnectionRequest {

}

message PollConnectionResponse {

}

message AcceptConnectionRequest {
    string connection_id = 1;
}

message AcceptConnectionResponse {

}

message PollCredentialOffersRequest {

}

message PollCredentialOffersResponse {

}

message AcceptCredentialRequest {
    string credential_id = 1;
}

message AcceptCredentialResponse {

}


